appId: com.googletest12
---
- launchApp
- tapOn: 'Hindi'
- pressKey: volume down
- repeat:
    times: 4
    commands:
      - pressKey: volume up
- takeScreenshot: MainScreen
# - tapOn: 'Hindi'
# - tapOn: 'English'
# - repeat:
#     times: 4
#     commands:
#       - tapOn: +
# - tapOn: 'Hindi'
# - clearState
